fix error on create site api phone_gap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -277,3 +277,8 @@ a.lbutton{
 #alert-legend li{
   vertical-align: middle;
 }
+
+.focus{
+  background-color: red;
+  border: 1px solid red;
+}
